force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active_Billing_Group_Count__c</fullName>
        <description>Count of Billing Group records with Status of &quot;Active&quot; to use in setting &quot;Active Customer&quot; and &quot;Former Customer&quot; Customer Stage values.</description>
        <label>Active Billing Group Count</label>
        <summaryFilterItems>
            <field>Billing_Group__c.Group_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Group__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Stage__c</fullName>
        <inlineHelpText>Shows where the Customer is in their life cycle with HMSA.</inlineHelpText>
        <label>Customer Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to Blue</fullName>
                    <default>true</default>
                    <label>New to Blue</label>
                </value>
                <value>
                    <fullName>First Opportunity Won</fullName>
                </value>
                <value>
                    <fullName>Active Customer</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <inlineHelpText>Select the type of  Customer that will be offering HMSA plans to their constituents.</inlineHelpText>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecasted_Members_Total__c</fullName>
        <inlineHelpText>Total forecasted members across all opportunities related to this account.</inlineHelpText>
        <label>Forecasted Members Total</label>
        <summarizedField>Opportunity.Forecasted_Members_For_Rollup__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Funding_Mechanism__c</fullName>
        <description>The Funding Meachanism at the Account level indicates how the Groups included within it are being rated, or another key value that determines how they should be managed.  Dependent on the Funding Type field.</description>
        <inlineHelpText>Funding Mechanism values are based upon the Funding Type field selection.</inlineHelpText>
        <label>Funding Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Funding_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Funding_Mechanism</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>Dependent on Funding Mechanism</description>
        <inlineHelpText>Funding Type based on the medical plan.</inlineHelpText>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_ACA_Option__c</fullName>
        <inlineHelpText>If any billing group for this customer is able to use a &quot;legacy&quot; (non-ACA) product, indicate the type here.</inlineHelpText>
        <label>Group ACA Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grandfathered</fullName>
                </value>
                <value>
                    <fullName>Grandmothered</fullName>
                </value>
                <value>
                    <fullName>Non-Grandfathered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HMSA_Secure_Employee_Count__c</fullName>
        <label>HMSA Secure Employee Count</label>
        <summaryFilterItems>
            <field>MemberPlan.HMSA_Secure_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>MemberPlan.MemberId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HMSA_Secure_Employee__c</fullName>
        <formula>HMSA_Secure_Employee_Count__c &gt;= 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HMSA Secure Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Healthcare plan for this patient</description>
        <inlineHelpText>Healthcare plan for this patient</inlineHelpText>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PatientAccounts</relationshipLabel>
        <relationshipName>PatientAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EnrollmentType__c</fullName>
        <label>Enrollment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>NonDual</fullName>
                    <default>true</default>
                    <label>NonDual</label>
                </value>
                <value>
                    <fullName>FBDual</fullName>
                </value>
                <value>
                    <fullName>PBDual</fullName>
                </value>
                <value>
                    <fullName>ESRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is in a institution.</description>
        <inlineHelpText>Indicates whether a patient is in a institution.</inlineHelpText>
        <label>Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__LowIncome__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient falls within low income guidelines.</description>
        <inlineHelpText>Indicates whether a patient falls within low income guidelines.</inlineHelpText>
        <label>Low Income</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidEligibilityStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a patient is eligible for medicaid.</description>
        <inlineHelpText>Indicates whether a patient is eligible for medicaid.</inlineHelpText>
        <label>Medicaid Eligibility Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicalRecordNumber__c</fullName>
        <description>The medical record number is organization specific. The number is used by the hospital as a systematic documentation of a patient´s medical history and care during each hospital stay.</description>
        <label>Medical Record Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicareEnrollee__c</fullName>
        <description>New member or continued from previous year.</description>
        <inlineHelpText>New member or continued from previous year.</inlineHelpText>
        <label>Medicare Enrollee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Enrollee</fullName>
                </value>
                <value>
                    <fullName>Continued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__OREC__c</fullName>
        <description>Original Reason for Medicare Entitlement</description>
        <label>OREC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PayerType__c</fullName>
        <label>Payer Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <description>Unique external id</description>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__TaxId__c</fullName>
        <label>TaxId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_national_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is National Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Island__c</fullName>
        <label>Island</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Island</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_ID__c</fullName>
        <label>Load ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>The market segment at the Account level indicates how the Groups included within it are being rated, or another key value that determines how they should be managed.</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Count_Total__c</fullName>
        <inlineHelpText>The sum of all Member Count values for the &quot;Active&quot; child Billing Groups of this record.</inlineHelpText>
        <label>Member Count Total</label>
        <summarizedField>Billing_Group__c.Member_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Group__c.Group_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Group__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Group_Create_Date__c</fullName>
        <description>Rollup Summary that captures the most recent Billing Group create date value so it can be used in other processes.</description>
        <label>Most Recent Group Create Date</label>
        <summarizedField>Billing_Group__c.CreatedDate</summarizedField>
        <summaryForeignKey>Billing_Group__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <inlineHelpText>Enter the Prospect&apos;s next renewal date.</inlineHelpText>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Account__c</fullName>
        <externalId>true</externalId>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscriber_Count_Total__c</fullName>
        <inlineHelpText>The sum of all Subscriber Count values for the Active Group child records.</inlineHelpText>
        <label>Subscriber Count Total</label>
        <summarizedField>Billing_Group__c.Subscriber_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Billing_Group__c.Group_Status__c</field>
            <operation>equals</operation>
            <value>ACTIVE</value>
        </summaryFilterItems>
        <summaryForeignKey>Billing_Group__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <inlineHelpText>The federal Tax ID for this company.</inlineHelpText>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the Agency account that is Offering HMSA plans.</inlineHelpText>
        <label>Third Party Offering</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only &quot;Agency&quot; type Accounts can be selected for the Third Party Offering field.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Agency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Employees__c</fullName>
        <label>Total Eligible Employees</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unemployment_Insurance_No__c</fullName>
        <inlineHelpText>This company&apos;s Unemployment Insurance ID Number for the state of Hawaii.</inlineHelpText>
        <label>Unemployment Insurance No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Union_Name__c</fullName>
        <description>If customer type is not Union, this field is for indicating the customer/prospects Union, if applicable.</description>
        <inlineHelpText>If customer type is not Union, indicate the customer or prospect&apos;s Union Name, if applicable.</inlineHelpText>
        <label>Union Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Customer_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>Total_Eligible_Employees__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Funding_Mechanism__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Customer_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>Total_Eligible_Employees__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Funding_Mechanism__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>Total_Eligible_Employees__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Funding_Mechanism__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My Customers</label>
    </listViews>
    <listViews>
        <fullName>My_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>Total_Eligible_Employees__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Funding_Mechanism__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>My Prospects</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Customer_Stage__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>Total_Eligible_Employees__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Funding_Mechanism__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Person_Account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>HMSA_Secure_Employee__c</columns>
        <columns>PC_BIRTHDATE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>HealthCloudGA__Gender__pc</columns>
        <columns>Customer_Stage__c</columns>
        <columns>HealthCloudGA__EnrollmentType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Person Account</label>
    </listViews>
    <recordTypes>
        <fullName>Agency</fullName>
        <active>true</active>
        <description>An Agency is a 3rd party or partner that sells or helps HMSA sell their plans.</description>
        <label>Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>A Competitor is a business that offers similar products to HMSA.</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>A Customer is a business that has an active plan with HMSA.</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesBusiness</fullName>
        <active>true</active>
        <description>Represents a business or an organization</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesHousehold</fullName>
        <active>true</active>
        <description>Represents a Household</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesIndividual</fullName>
        <active>true</active>
        <description>Represents an Individual</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__IndustriesPayer</fullName>
        <active>true</active>
        <description>Represents a Payer</description>
        <label>Payer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>A Prospect is a business that has passed Lead qualification but doesn&apos;t have an active HMSA plan.</description>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
        <active>false</active>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The Individual record type can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
        <active>false</active>
        <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
        <errorConditionFormula>1!=1</errorConditionFormula>
        <errorMessage>The record type can&apos;t be changed to Individual.</errorMessage>
    </validationRules>
</CustomObject>