force-app/main/default/objects/Account/fields/Dynamics_ID_Text_36__c.field-meta.xml
<CustomField>
    <fullName>Dynamics_ID_Text_36__c</fullName>
    <label>Dynamics ID  - Text(36)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>