force-app/main/default/objects/Account/validationRules/HealthCloudGA__NotAllowingConversionFromIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__NotAllowingConversionFromIndividual</fullName>
    <active>false</active>
    <errorConditionFormula>1!=1</errorConditionFormula>
    <errorMessage>The Individual record type can&#39;t be changed</errorMessage>
</ValidationRule>