force-app/main/default/objects/Account/validationRules/HealthCloudGA__NotAllowingConversionToIndividual.validationRule-meta.xml
<ValidationRule>
    <fullName>HealthCloudGA__NotAllowingConversionToIndividual</fullName>
    <active>false</active>
    <description>Not allowing changing the record type of &quot;non-Individual&quot; to &quot;Individual&quot; record type</description>
    <errorConditionFormula>1!=1</errorConditionFormula>
    <errorMessage>The record type can&#39;t be changed to Individual.</errorMessage>
</ValidationRule>