force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Customer_Stage__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>Total_Eligible_Employees__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Funding_Mechanism__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>