force-app/main/default/objects/Account/listViews/My_Accounts.listView-meta.xml
<ListView>
    <fullName>My_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Customer_Stage__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>Total_Eligible_Employees__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Funding_Mechanism__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>