force-app/main/default/objects/Account/listViews/My_Customers.listView-meta.xml
<ListView>
    <fullName>My_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Funding_Mechanism__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.URL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer</value>
    </filters>
    <label>My Customers</label>
</ListView>