force-app/main/default/objects/Account/listViews/My_Prospects.listView-meta.xml
<ListView>
    <fullName>My_Prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Stage__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>Total_Eligible_Employees__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Funding_Mechanism__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prospect</value>
    </filters>
    <label>My Prospects</label>
</ListView>