force-app/main/default/objects/Account/listViews/Person_Account.listView-meta.xml
<ListView>
    <fullName>Person_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>HMSA_Secure_Employee__c</columns>
    <columns>PC_BIRTHDATE</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>HealthCloudGA__Gender__pc</columns>
    <columns>Customer_Stage__c</columns>
    <columns>HealthCloudGA__EnrollmentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Person Account</label>
</ListView>